--- a/ejerc-4/Inscribir.html
+++ b/ejerc-4/Inscribir.html
@@ -51,6 +51,9 @@
               <button id="btnAdd" type="button" class="btn btn-primary">
                 Agregar
               </button>
+              <button id="btnAsist" type="button" class="btn btn-primary">
+                Asistencia
+              </button>
             </form>
           </div>
         </div>
@@ -61,6 +64,7 @@
               <tr>
                 <th>Número de Cuenta</th>
                 <th>Nombre</th>
+                <th>Asistencias</th>
               </tr>
             </thead>
             <tbody></tbody>
